--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 .header{
     background-image: url(./img/Banner\ Image.png);
     background-repeat: no-repeat;
-    background-size: 90%;
+    background-size: 80%;
     background-position: center;
+    border-radius: 10px;
 }
 
 .header-sub-title{
@@ -49,4 +50,61 @@
     height: 600px;
     width: 600px;
     margin: 0px 300px;
+}
+
+/* welcome section */
+.welcome{
+    background-image: url(./img/Vectorrr.png);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+    border-radius: 10px;
+    display: flex;
+}
+.welcome-title{
+    color: white;
+    font-size: 80px;
+    padding: 50px 0px 0px 150px;
+    width: 60%;
+    margin-top: 50px;
+
+
+}
+.welcome-description{
+    color: white;
+    padding-bottom: 20px;
+    padding-left: 150px;
+    padding-top: 0px;
+    font-size: 25px;
+    width: 70%;
+    margin-bottom: 50px;
+}
+
+
+.only{
+    padding-top: 200px;
+    padding-right: 200px;
+}
+
+/* gardiyent start */
+.gradient{
+    background-image: linear-gradient(to top, white , pink);
+    height: 400px;
+    width: 80%;
+    margin: 100px auto;
+    
+}
+h3{
+    display: inline-block;
+}
+.red{
+    color: red;
+}
+button{
+    color: white;
+    background-color: red;
+    border: none;
+    padding: 5px;
+    align-items: center;
+    margin-bottom: 100px;
 }
