--- a/style.css
+++ b/style.css
@@ -108,3 +108,42 @@ button{
     align-items: center;
     margin-bottom: 100px;
 }
+
+
+/* article */
+article{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    padding: 150px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.box{
+    height: 400px;
+    width: 400px;
+    background-color: red;
+    border-radius: 50%;
+    
+
+}
+.box >img{
+  
+    margin: 20px;
+}
+
+.article-title{
+    font-weight: bold;
+    font-size: 40px;
+}
+.article-sub-title{
+    color: red;
+    font-size: 20px;
+}
+.article-description{
+    color: #474747;
+    font-size: 15px;
+}
+.article-img{
+
+}
