--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
     background-image: linear-gradient(to top, white , pink);
     height: 400px;
     width: 80%;
-    margin: 100px auto;
+    margin: 200px auto;
     
 }
 h3{
@@ -116,8 +116,8 @@ article{
     justify-content: space-between;
     gap: 30px;
     padding: 150px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .box{
     height: 400px;
@@ -146,4 +146,129 @@ article{
 }
 .article-img{
 
+}
+
+/* holiday-sub-title */
+.text{
+    text-align: center;
+    gap: 10px;
+}
+.holiday-title{
+    font-size: 70px;
+    font-weight: bold;
+
+}
+.holidays-red{
+    color: red;
+}
+
+.holiday-sub-title{
+
+}
+.holiday-description{
+    color: #474747;
+    font-size: 20px;
+}
+
+/* aside */
+.images-one-two{
+    height: 200px;
+    width: 200px;
+}
+
+/* Portfolio section */
+.Portfolio{
+
+}
+.text2{
+    margin-left: 200px;
+}
+.Portfolio-title{
+    font-weight: 700;
+    font-size: 60px;
+    
+}
+.Portfolio-sub-title{
+    color: red;
+    font-size: 20px;
+    margin: 10px;
+}
+.Portfolio-description{
+    color: #474747;
+    margin: 10px;
+    font-size: 15px;
+}
+.Portfolio-1{
+    margin: 10px;
+    display: flex;
+    height: 300px;
+    width: 400px;
+    gap: 20px;
+    margin-left: 200px;
+}
+.Portfolio-2{
+    margin: 10px;
+    display: flex;
+    height: 300px;
+    width: 400px;
+    gap: 20px;
+    margin-left: 200px;
+    margin-bottom: 120px;
+}
+
+/* Subscribe */
+.Subscribe{
+    height: 400px;
+    width: 1000px;
+    background-color: rgb(245, 227, 230);
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 20px;
+    padding: 100px;
+
+}
+.Subscribe-title{
+    font-size: 50px;
+    font-weight: bolder;
+}
+.Subscribe-description{
+    color: #474747;
+    font-size: 15px;
+    font-weight: lighter;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+.text3{
+
+}
+
+.black-box{
+    height: 400px;
+    width: 100%;
+    margin-top: 100px;
+    background-color: black;
+    color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 100px;
+}
+
+/* footer */
+.part1{
+    display: flex;
+    justify-content: space-around;
+}
+.part2{
+    display: flex;
+    justify-content: space-around;
+}
+.icon{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    padding-left: 40%;
+}
+.last{
+    display: flex;
+    justify-content: space-around;
 }
